<resources>
    <string name="app_name">MJC</string>
    <string name="text_or">OR</string>
    <string name="string_consumer">Consumer</string>
    <string name="string_engineer">Engineer</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="newuser_string">New user?</string>
    <string name="newuser_string_register">" Register"</string>
    <string name="newuser_string_here">" here"</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="text_signup">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="string_full_construction">Full Construction</string>
    <string name="string_finishing_work">Finishing Work</string>
    <string name="string_main_concrete">Main Concrete</string>
    <string name="work_type">Work type?</string>
    <string name="add_measurement">Add measurement</string>
    <string name="bs_string_total">Total Area</string>
    <string name="hint_bs_enter_area_text">Enter area</string>
    <string name="bs_string_squreft">Squre feet</string>
    <string name="bs_string_build">Build Area</string>
    <string name="bs_string_upload_plan">Upload Plan</string>
    <string name="bs_string_hire_engineer">Hire Engineer</string>
    <string name="bs_string_buy_materials">Buy Materials</string>
    <string name="bs_string_expense">Expense Estimate</string>
    <string name="bs_string_continue">Continue</string>
    <string name="bs_string_total_price">Total</string>
    <string name="user_profile_text_rating">Rating</string>
    <string name="user_profile_text_payment">Payment</string>
    <string name="user_profile_text_works">Works</string>
    <string name="user_profile_string_id_proof">ID Proof</string>
    <string name="user_profile_string_upload">Upload</string>
    <string name="user_profile_string_previous_work">Previous Works</string>
    <string name="bs_string_hire_me">Hire Me</string>
    <string name="rupee_sign">₹</string>
    <string name="string_edit">Edit</string>
    <string name="add_previous_work">Add works</string>
    <string name="age_string">Age</string>
    <string name="hint_address">Address</string>
    <string name="hint_fee_p_h">"Rate/Sq.ft (Minimum)"</string>

    <string name="hint_work_name">Work Name</string>
    <string name="hint_desceiption">Description</string>
    <string name="hint_date_of_completion">Date of completion</string>
    <string name="hint_owner_name">Owner name</string>
    <string name="hint_work_area">Building area (Sqft.)</string>
    <string name="hint_work_type">Work type</string>
    <string name="text_previous_work_photo">Add photos</string>
    <string name="string_save">Save</string>
    <string name="string_add">Add</string>
    <string name="profile_string_profile_settings">Account settings</string>
    <string name="profile_string_help_center">Help center</string>
    <string name="profile_settings_notification">Notifications</string>
    <string name="profile_string_privacy_policy">Privacy policy</string>
    <string name="profie_string_about_us">About us</string>
    <string name="profile_string_logout">Logout</string>
    <string name="text_continue">Continue</string>
    <string name="hint_proffesion">Profession</string>
    <string name="hint_construction_type">Construction type</string>
    <string name="hint_numberofworkers">Number of workers needed</string>
    <string name="hint_rate_per_swurefeet">Rate / sq.ft</string>
    <string name="text_id_card">ID Card</string>
    <string name="text_skip">Skip</string>
    <string name="text_add_more_work">Add more works</string>
    <string name="text_select_work_type">Select work type</string>
    <string name="text_my_customers">My customers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_building_type">Select building types</string>
    <string name="title_activity">Activities</string>
    <string name="text_select_picture">Add photo</string>
    <string name="select_building">Choose building type</string>
    <string name="text_coming_soon">Coming soon...</string>
    <string name="text_empty_engineers_list">No engineers found for this Buliding type!</string>
</resources>
