<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_icon_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.work.AddWorkDetailsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
<!--<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/home_card_radius"
    android:layout_margin="@dimen/card_frsgment_add_work">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_work_work_name"
        android:hint="@string/hint_work_name"
        android:textColor="@color/app_black"
        android:maxLines="1"
        android:cursorVisible="true"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_add_work_work_type"
        android:hint="@string/hint_work_type"
        android:textColor="@color/app_black"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:text="@string/text_select_work_type"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/rv_add_work_work_type"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:padding="@dimen/add_work_frag_edittext_padding"
            android:textSize="@dimen/add_work_fragment_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_work_work_area"
        android:hint="@string/hint_work_area"
        android:cursorVisible="true"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:textColor="@color/app_black"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_work_work_owner_name"
        android:hint="@string/hint_owner_name"
        android:maxLines="1"
        android:textColor="@color/app_black"
        android:cursorVisible="true"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_work_date_of_completion"
        android:hint="@string/hint_date_of_completion"
        android:maxLines="1"
        android:textColor="@color/app_black"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_work_description"
        android:hint="@string/hint_desceiption"
        android:cursorVisible="true"
        android:textColor="@color/app_black"
        android:background="@drawable/app_edit_text_bg_blue"
        android:layout_margin="@dimen/add_work_frag_edittext_margin"
        android:padding="@dimen/add_work_frag_edittext_padding"
        android:textSize="@dimen/add_work_fragment_text_size"/>

    </LinearLayout>
<!--</androidx.cardview.widget.CardView>-->
   <!-- <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/home_card_radius"
        android:layout_margin="@dimen/card_frsgment_add_work">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:padding="@dimen/add_work_frag_edittext_padding"
            android:textSize="@dimen/add_work_fragment_text_size"
            android:text="@string/text_previous_work_photo"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_add_work_add_image"

            android:background="@drawable/app_edit_text_bg_blue"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:padding="@dimen/add_work_frag_edittext_padding"

            />
        </LinearLayout>
    <!--</androidx.cardview.widget.CardView>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/fragment_add_work_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/bt_add_work_save"
            android:textAllCaps="false"
            android:background="@drawable/bs_continue_button_bg"
            android:textColor="@color/white"
            android:text="@string/string_add"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:padding="@dimen/add_work_frag_edittext_padding"

            />
        <TextView
            android:layout_width="@dimen/fragment_add_work_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/bt_add_work_skip"
            android:textAllCaps="false"
            android:textColor="@color/color_light_black"
            android:text="@string/text_skip"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/add_work_frag_edittext_margin"
            android:padding="@dimen/add_work_frag_edittext_padding"

            />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>