<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.user_details.ConsumerDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/more_details_id_card"
        android:layout_width="@dimen/login_username_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/more_details_margin_top"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/intro_cardview_cornner_radius"
        app:cardElevation="@dimen/intro_cardview_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/login_icon_size"
                    android:layout_height="@dimen/login_icon_size"
                    android:layout_marginStart="@dimen/login_icon_margin"
                    android:layout_marginTop="@dimen/login_icon_margin"
                    android:layout_marginEnd="@dimen/login_icon_margin"
                    android:layout_marginBottom="9dp"
                    android:padding="@dimen/login_icon_padding"
                    android:src="@drawable/ic_id_card" />

                <TextView
                    android:id="@+id/tv_more_details_id_proof_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="@string/hint_password"
                    android:maxWidth="@dimen/login_user_maxwidth"
                    android:maxLines="1"
                    android:text="@string/text_id_card"
                    android:textSize="@dimen/text_size_more_details" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_more_details_id_upload"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bs_upload_textView_size"
                    android:layout_margin="@dimen/bs_upload_margin"
                    android:background="@drawable/bs_upload_view_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/user_profile_string_upload"
                    android:textSize="@dimen/bs_mesurement_upload_text_size"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/more_details_id_image_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bs_upload_textView_size"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_more_details_id_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/bs_upload_textView_size"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:textStyle="bold"

                        android:visibility="visible" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/signup_cv_signup_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/intro_cardview_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/bt_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:padding="@dimen/more_details_text_padding"
            android:text="@string/text_skip"
            android:textColor="@color/app_black"
            android:textSize="@dimen/text_size_more_details"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/bt_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|right"
            android:padding="@dimen/more_details_text_padding"
            android:text="@string/text_continue"
            android:textColor="@color/color_light_blue"
            android:textSize="@dimen/text_size_more_details"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>