<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.IntroActivity.IntroActivity"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/intro_cv_engineer"
        android:layout_width="@dimen/intro_cardview_width"
        android:layout_height="@dimen/intro_cardview_height"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/intro_cardview_cornner_radius"
        app:cardElevation="@dimen/intro_cardview_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/AppShadow"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_intro" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_engineer"
            android:textSize="@dimen/intro_string_size"
            android:textStyle="bold"
            android:layout_gravity="center"
            >
        </TextView>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linear_layout_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_left"
            android:layout_width="@dimen/intro_line_width"
            android:layout_height="@dimen/line_height"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.2"
            android:layout_gravity="center"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:gravity="center"
            android:text="@string/text_or"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/intro_or_textsize"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_right"
            android:layout_width="@dimen/intro_line_width"
            android:layout_height="@dimen/line_height"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.2"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:background="@color/light_grey" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/intro_cv_consumer"
        android:layout_width="@dimen/intro_cardview_width"
        android:layout_height="@dimen/intro_cardview_height"
        android:layout_marginBottom="18dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/intro_cardview_cornner_radius"
        app:cardElevation="@dimen/intro_cardview_elevation"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_intro"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/AppShadow"
        app:layout_constraintStart_toStartOf="parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_consumer"
            android:textSize="@dimen/intro_string_size"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
